Bucket Index metadata and Index API have been overhauled